--- a/named-entity-recognition.ipynb
+++ b/named-entity-recognition.ipynb
@@ -556,7 +556,8 @@
     "### Callbacks\n",
     "\n",
     "As mentioned in the beginning we want to use the [Hugging Face Hub](https://huggingface.co/models) for model versioning and monitoring. Therefore we want to push our models weights, during training and after training to the Hub to version it.\n",
-    "Additionally we want to track the peformance during training therefore we will push the `Tensorboard` logs along with the weights to the Hub to use the \"Training Metrics\" Feature to monitor our training in real-time. "
+    "Additionally we want to track the peformance during training therefore we will push the `Tensorboard` logs along with the weights to the Hub to use the \"Training Metrics\" Feature to monitor our training in real-time. \n",
+    "\n"
    ]
   },
   {
@@ -584,7 +585,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training"
+    "![tensorboard](./imgs/tensorboard.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training\n",
+    "\n",
+    "Start training with calling `model.fit`"
    ]
   },
   {
@@ -783,7 +793,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Model Card with evaluation results"
+    "## Create Model Card with evaluation results\n",
+    "\n",
+    "To complete our Hugging Face Hub repository we will create a model card with the used hyperparameters and the evaluation results."
    ]
   },
   {
@@ -866,6 +878,13 @@
     "    path_or_fileobj=model_card_path,\n",
     "    path_in_repo=\"README.md\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![model-card](./imgs/model-card.png)"
    ]
   },
   {
